- Dockerfile: Hazelcache module parameters